--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,7 +1,7 @@
 pipeline{
     agent any
     tools{
-        maven 'maven_3_9_3'
+        maven 'Maven 3.9.3'
     }
     stages{
         stage('Build Maven'){
